--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -58,7 +58,23 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
+  function removeT(e){
+    if(e.propertyName !=='transform') return;
+    e.target.classList.remove('playing')
+  }
 
+  function playaudio(e){
+  const audio=document.querySelector(`audio[data-key="${e.keycode}"]`);
+  const key=document.querySelector(`div[data-key="${e.keycode}"]`);
+  if(!audio) return;
+  key.classList.add('playing')
+  audio.currenttime=0
+  audio.play()
+  }
+
+  const keys = Array.from(document.querySelectorAll('.key'));
+  keys.forEach(key => key.addEventListener('transitioned',removeT));
+  window.addEventListener('keydown',playaudio);
 </script>
 
 
