--- a/01 - JavaScript Drum Kit/index-mine.html
+++ b/01 - JavaScript Drum Kit/index-mine.html
@@ -70,7 +70,7 @@
       const key = document.querySelector(`div[data-key="${e.keyCode}"]`);
       if (!audio) return;
       key.classList.add('playing');
-      // audio.currentTime = 0;
+      audio.currentTime = 0;
       audio.play();
     }
 
