--- a/02 - JS and CSS Clock/index-copy.html
+++ b/02 - JS and CSS Clock/index-copy.html
@@ -6,7 +6,6 @@
 </head>
 <body>
 
-
     <div class="clock">
       <div class="clock-face">
         <div class="hand hour-hand"></div>
@@ -22,27 +21,27 @@
       background-size:cover;
       font-family:'helvetica neue';
       text-align: center;
-      font-size: 10px;
+      font-size: 10px; 
     }
 
     body {
       margin: 0;
-      font-size: 2rem;
+      /* font-size: 2rem; */
       display:flex;
       flex:1;
-      min-height: 100vh;
-      align-items: center;
+      min-height: 100vh;/* 设置段落的最小高度 */
+      align-items: center; /* 适用于flex容器，弹性盒子元素在该行的侧轴（纵轴）上居中放置。 */
     }
 
     .clock {
       width: 30rem;
       height: 30rem;
       border:20px solid white;
-      border-radius:50%;
+      border-radius:50%;/*向 div 元素添加圆角边框：*/
       margin:50px auto;
       position: relative;
-      padding:2rem;
-      box-shadow:
+      padding:2rem;/*哪里？*/
+      box-shadow:/*向div元素添加一个或多个阴影，逗号分隔*/
         0 0 0 4px rgba(0,0,0,0.1),
         inset 0 0 0 3px #EFEFEF,
         inset 0 0 10px black,
@@ -62,15 +61,16 @@
       background:black;
       position: absolute;
       top:50%;
-      transform-origin: 100%;
-      transform: rotate(90deg);
+      transform-origin: 100%;/* 设置旋转基点*/
+      /* transform: rotate(90deg);  */
       transition: all 0.05s;
-      transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
+      transition-timing-function: linear;/* 根据时间的推进去改变属性值的变换速率 */
     }
 </style>
 
 <script>
   const secondHand = document.querySelector('.second-hand');
+  secondHand.style.background = "cyan";
   const minsHand = document.querySelector('.min-hand');
   const hourHand = document.querySelector('.hour-hand');
 
@@ -90,7 +90,7 @@
     hourHand.style.transform = `rotate(${hourDegrees}deg)`;
   }
 
-  setInterval(setDate, 1000);
+  // setInterval(setDate, 1000);
 
   setDate();
 
