--- a/03 - CSS Variables/index-START.html
+++ b/03 - CSS Variables/index-START.html
@@ -18,7 +18,7 @@
     <input id="base" type="color" name="base" value="#ffc600">
   </div>
 
-  <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500">
+  <img src="DSC01672.jpg">
 
   <style>
 
@@ -45,6 +45,8 @@
   </style>
 
   <script>
+
+
   </script>
 
 </body>
