--- a/03 - CSS Variables/index-zoe.html
+++ b/03 - CSS Variables/index-zoe.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Scoped CSS Variables and JS</title>
 </head>
+
 <body>
-  <h2>Update CSS Variables with <span class='hl'>JS</span></h2>
+  <h2>Update CSS Variables with
+    <span class='hl'>JS</span>
+  </h2>
 
   <div class="controls">
     <label for="spacing">Spacing:</label>
@@ -15,22 +19,23 @@
     <input id="blur" type="range" name="blur" min="0" max="25" value="10" data-sizing="px">
 
     <label for="base">Base Color</label>
-    <input id="base" type="color" name="base" value="#ffc600">
+    <input id="base" type="color" name="base" value="#ffffff">
+
   </div>
 
   <img src="DSC01672.jpg">
 
   <style>
     :root {
-      --base: #ffc600;
       --spacing: 10px;
       --blur: 10px;
+      --base: #ffffff;
     }
 
     img {
       padding: var(--spacing);
-      background: var(--base);
       filter: blur(var(--blur));
+      background: var(--base);
       width: 364.8px;
       height: 547.2px;
     }
@@ -38,6 +43,7 @@
     .hl {
       color: var(--base);
     }
+
 
     /*
       misc styles, nothing to do with CSS variables
@@ -57,22 +63,25 @@
     }
 
     input {
-      width:100px;
+      width: 100px;
     }
   </style>
 
   <script>
-    const inputs = document.querySelectorAll('.controls input');
+    const inputs=document.querySelectorAll('.controls input');
 
-    function handleUpdate() {
-      const suffix = this.dataset.sizing || '';
-      document.documentElement.style.setProperty(`--${this.name}`, this.value + suffix);
+    function changeImg(){
+      const suffix=this.dataset.sizing || '';
+      document.documentElement.style.setProperty(`--${this.name}`,this.value+suffix);
     }
 
-    inputs.forEach(input => input.addEventListener('change', handleUpdate));
-    inputs.forEach(input => input.addEventListener('mousemove', handleUpdate));
+    inputs.forEach(input=>input.addEventListener('change',changeImg));
+    inputs.forEach(input=>input.addEventListener('mouseover',changeImg));
+
+
+
   </script>
 
-
 </body>
+
 </html>
