--- a/03 - CSS Variables/index-START.html
+++ b/03 - CSS Variables/index-START.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Scoped CSS Variables and JS</title>
 </head>
+
 <body>
-  <h2>Update CSS Variables with <span class='hl'>JS</span></h2>
+  <h2>Update CSS Variables with
+    <span class='hl'>JS</span>
+  </h2>
 
   <div class="controls">
     <label for="spacing">Spacing:</label>
@@ -21,7 +25,6 @@
   <img src="DSC01672.jpg">
 
   <style>
-
     /*
       misc styles, nothing to do with CSS variables
     */
@@ -40,7 +43,7 @@
     }
 
     input {
-      width:100px;
+      width: 100px;
     }
   </style>
 
@@ -50,4 +53,5 @@
   </script>
 
 </body>
+
 </html>
