--- a/05 - Flex Panel Gallery/index-START.html
+++ b/05 - Flex Panel Gallery/index-START.html
@@ -23,7 +23,7 @@
 
     .panels {
       min-height:100vh;
-      overflow: hidden;
+      overflow: hidden;/*内容溢出元素框时，内容会被修剪，并且其余内容不可见 */
     }
 
     .panel {
